--- a/pirate.html
+++ b/pirate.html
@@ -48,7 +48,7 @@
     }
 
 .TreasureHunt  {
-    width: 30%;
+    width: 10%;
     margin: 0 auto;
     padding: 20px;
     box-sizing: border-box;
@@ -89,38 +89,39 @@
 <div class="TreasurHunt">
     <div class="row">
         <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="Treasure.jpg" alt="treasure" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="trap.jpg" alt="traps" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="pirate bone.png" alt="pirate bone" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="pirate bone.png" alt="seconditeam" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+
     </div>
     <div class="row">
         <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="Treasure.jpg" alt="treasure" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="trap.jpg" alt="traps" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="pirate bone.png" alt="pirate bone" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="pirate bone.png" alt="seconditeam" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
     </div>
     <div class="row">
         <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="Treasure.jpg" alt="treasure" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="trap.jpg" alt="traps" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="pirate bone.png" alt="pirate bone" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="pirate bone.png" alt="seconditeam" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
     </div>
     <div class="row">
         <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="Treasure.jpg" alt="treasure" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="trap.jpg" alt="traps" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="pirate bone.png" alt="pirate bone" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="pirate bone.png" alt="seconditeam" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
     </div>
     <div class="row">
         <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="Treasure.jpg" alt="treasure" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="trap.jpg" alt="traps" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="pirate bone.png" alt="pirate bone" style="width: 120px;height: 70px;"></div>
-        <div class="search_location col-sm-2"><img src="pirate bone.png" alt="seconditeam" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
+        <div class="search_location col-sm-2"><img src="Location.jpg" alt="Treasure Location" style="width: 120px;height: 70px;"></div>
     </div>
 </div>
 
