--- a/pirate.html
+++ b/pirate.html
@@ -71,6 +71,7 @@
 <p id="penalty">Penalty is zero.</p>
 <p id="forHelp" onclick="help()">Click for help.</p>
 <div id="help">Help report</div>
+<button onclick="newGame()">new game</button>
 
 <div class="TreasureHunt">
     <div class="row">
@@ -186,7 +187,7 @@
         console.log("trapLocation "+trapLocation)
         for (let index = 0; index < 25; index++) {
             let images=document.getElementById(ids[index])
-            images.src="map.jpg"
+            images.src="Location.jpg"
         }
         }
 </script>
